add LNC XY ,MOV Y,Im,MOV X,Im, LD A

--- a/TD4M Emulator.vcxproj.filters
+++ b/TD4M Emulator.vcxproj.filters
@@ -52,6 +52,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="Zaur.txt" />
+    <Text Include="Zaur.txt">
+      <Filter>Файлы заголовков</Filter>
+    </Text>
   </ItemGroup>
 </Project>
